@@ -1,7 +1,7 @@
 #!/usr/bin/perl -w
 
 # accessor.pl: generate accessor functions
-# Copyright (c) 2003-2015 Philip Kendall
+# Copyright (c) 2003-2016 Philip Kendall
 
 # $Id$
 
@@ -240,6 +240,13 @@ struct libspectrum_snap {
 
   /* Printer emulation */
   int zx_printer_active;
+
+  /* uSource emulation */
+  int usource_active;
+  int usource_paged;
+  int usource_custom_rom;
+  libspectrum_byte* usource_rom[1];
+  size_t usource_rom_length[1];	/* Length of the ROM */
 };
 
 /* Initialise a libspectrum_snap structure */
